008/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  labels:
    app.kubernetes.io/name: httpd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: httpd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpd
    spec:
      containers:
      - env:
        - name: PORT
          value: "80"
        image: httpd:alpine 
        imagePullPolicy: Always
        name: httpd
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
