008/metallb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
   app.kubernetes.io/name: httpd
  name: httpd
  annotations:
    metallb.universe.tf/address-pool: first-pool
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: httpd
  type: LoadBalancer
