008/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: httpd
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
